Fix the gap on the gallery grid

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -307,7 +307,7 @@ main div {
     display: grid;
     width: 95%;
     height: 100%;
-    gap: 5px 5px;
+    gap: 10px 10px;
     margin: auto;
 
     justify-content: center;
